# CS332Spring2023

./: .gitignore  CMakeLists.txt  a.out
HW02/: HW02.c  Makefile  README.md  a.out  hw02
HW03/: Makefile  README.md  a.out  forkexecv.c  hw03.c  hw03.s
hw01/: Makefile  emanuels_HW01  emanuels_HW01.c
hw01/asgn2/: Makefile  asgn2  asgn2.c  asgn2.h
lab01/: Makefile  a.out  lab01  lab01.c
lab02/: Makefile  lab02  lab02.c
lab03/: lab03.c
lab04/: Makefile  a.out  copyFileExample.c  file1.txt  lab04  lab04.c  lseekExample.c
lab04/testDir/testDir2/: file2.txt
lab05/: Makefile  TAcode.c  a.out  lab05  lab05.c  lab05Out  modifed_readdir_v2_TAB.c
lab07/: a.out  forkexecv.c  lab07.c  lab07Input.txt
lab09/: a.out  forkexecvp.c  sigint.c  singal.c  test.c
lab10/: a.out  lab07Input.txt  lab10.c  lab7_solution.c
lab11/: a.out
test/: Makefile  test.c
